src/jjt/jmm.java
/* jmm.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. jmm.java */
package jjt;

import java.io.*;

public class jmm/*@bgen(jjtree)*/implements jmmTreeConstants, jmmConstants {/*@bgen(jjtree)*/
  protected static JJTjmmState jjtree = new JJTjmmState();static boolean has_error = false, parsed = false;
    static int[][] tokenCache;

    static void pushTokenCache() {
        jmm.tokenCache = new int[2][2];
        jmm.tokenCache[0][0] = jmm.token.beginLine;
        jmm.tokenCache[0][1] = jmm.token.beginColumn;
        jmm.tokenCache[1][0] = jmm.token.endLine;
        jmm.tokenCache[1][1] = jmm.token.endColumn + 1;
    }

    /**
     * Called directly through the command line, used on checkpoint 1.
     */
    public static void main(String[] args) {
        if (args.length == 0) {
            System.err.println("Usage: java jjt.jmm java-file [number of recoveries]");
            System.exit(1);
        }

        File file = new File(args[0]);
        if (args.length > 1) ParseException.numberRecoveries = Integer.parseInt(args[1]);

        try {
            SimpleNode root = parseClass(file);
            if (root != null) root.dump("");
        } catch (FileNotFoundException e) {
            System.err.println(e.getMessage());
            System.exit(1);
        } catch (ParseException e) {
            System.err.println(e.getMessage());
            System.exit(1);
        }
    }

    public static SimpleNode parseClass(File file) throws FileNotFoundException, ParseException {
        FileReader fr = new FileReader(file);
        ParseException.file = file.toString();
        jmm myProg = new jmm(fr);

        SimpleNode root = jmm.Program();
        return root;
    }

    public static SimpleNode parseAssignment(File file) throws FileNotFoundException, ParseException {
        FileReader fr = new FileReader(file);
        ParseException.file = file.toString();
        jmm myProg = new jmm(fr);

        SimpleNode root = jmm.ProgramAssignment();
        return root;
    }

    public static SimpleNode parseExpression(File file) throws FileNotFoundException, ParseException {
        FileReader fr = new FileReader(file);
        ParseException.file = file.toString();
        jmm myProg = new jmm(fr);

        SimpleNode root = jmm.ProgramExpression();
        return root;
    }

    public static SimpleNode parseTerm(File file) throws FileNotFoundException, ParseException {
        FileReader fr = new FileReader(file);
        ParseException.file = file.toString();
        jmm myProg = new jmm(fr);

        SimpleNode root = jmm.ProgramTerm();
        return root;
    }

  static final public SimpleNode Program() throws ParseException {/*@bgen(jjtree) Program */
  SimpleNode jjtn000 = new SimpleNode(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      ClassDeclaration();
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.jjtSetLastToken(getToken(0));
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public SimpleNode ProgramExpression() throws ParseException {/*@bgen(jjtree) ProgramExpression */
  SimpleNode jjtn000 = new SimpleNode(JJTPROGRAMEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      Expression();
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.jjtSetLastToken(getToken(0));
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public SimpleNode ProgramTerm() throws ParseException {/*@bgen(jjtree) ProgramTerm */
  SimpleNode jjtn000 = new SimpleNode(JJTPROGRAMTERM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      Term4();
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.jjtSetLastToken(getToken(0));
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public SimpleNode ProgramAssignment() throws ParseException {/*@bgen(jjtree) ProgramAssignment */
  SimpleNode jjtn000 = new SimpleNode(JJTPROGRAMASSIGNMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      IdentifierStatement();
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.jjtSetLastToken(getToken(0));
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
    throw new Error("Missing return statement in function");
  }

// According to the Java Identifier specification, 'length' is a valid
// identifier. So we should accept method names called 'length' along with
// the construct 'variable.length'. This generates a difficult lookahead issue
// at ObjectAccessTail() and then LengthTail(), as the two different constructs
// Length(1) and Call(3) interact with the previous <LENGTH> token differently.
// The first does not add <LENGTH> to the AST, while the second does, and it
// needs its begin and end line/column. So we add <LENGTH> to the jmm cache,
// and 'pop' it only if necessary.
  static final public void Length() throws ParseException {
    jj_consume_token(LENGTH);
jmm.pushTokenCache();
  }

  static final public void MethodNameLength() throws ParseException {/*@bgen(jjtree) MethodName */
  SimpleNode jjtn000 = new SimpleNode(JJTMETHODNAME);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.jjtSetLastToken(getToken(0));
jjtn000.jjtSetVal("length");
        jjtn000.cacheBegin = jmm.tokenCache[0];
        jjtn000.cacheEnd = jmm.tokenCache[1];
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

// *** Terminals with Values
  static final public void Integer() throws ParseException {/*@bgen(jjtree) Integer */
                  SimpleNode jjtn000 = new SimpleNode(JJTINTEGER);
                  boolean jjtc000 = true;
                  jjtree.openNodeScope(jjtn000);
                  jjtn000.jjtSetFirstToken(getToken(1));Token token;
    try {
      token = jj_consume_token(INTEGERLITERAL);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.jjtSetLastToken(getToken(0));
jjtn000.jjtSetVal(token.image);
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

  static final public void MethodName() throws ParseException {/*@bgen(jjtree) MethodName */
                     SimpleNode jjtn000 = new SimpleNode(JJTMETHODNAME);
                     boolean jjtc000 = true;
                     jjtree.openNodeScope(jjtn000);
                     jjtn000.jjtSetFirstToken(getToken(1));Token token;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
        token = jj_consume_token(IDENTIFIER);
        break;
        }
      case MAIN:{
        token = jj_consume_token(MAIN);
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.jjtSetLastToken(getToken(0));
jjtn000.jjtSetVal(token.image);
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

  static final public void ClassMethodName() throws ParseException {/*@bgen(jjtree) MethodName */
                                      SimpleNode jjtn000 = new SimpleNode(JJTMETHODNAME);
                                      boolean jjtc000 = true;
                                      jjtree.openNodeScope(jjtn000);
                                      jjtn000.jjtSetFirstToken(getToken(1));Token token;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
        token = jj_consume_token(IDENTIFIER);
        break;
        }
      case MAIN:{
        token = jj_consume_token(MAIN);
        break;
        }
      case LENGTH:{
        token = jj_consume_token(LENGTH);
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.jjtSetLastToken(getToken(0));
jjtn000.jjtSetVal(token.image);
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

  static final public void ClassType() throws ParseException {/*@bgen(jjtree) ClassType */
                    SimpleNode jjtn000 = new SimpleNode(JJTCLASSTYPE);
                    boolean jjtc000 = true;
                    jjtree.openNodeScope(jjtn000);
                    jjtn000.jjtSetFirstToken(getToken(1));Token token;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
        token = jj_consume_token(IDENTIFIER);
        break;
        }
      case MAIN:{
        token = jj_consume_token(MAIN);
        break;
        }
      case LENGTH:{
        token = jj_consume_token(LENGTH);
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.jjtSetLastToken(getToken(0));
jjtn000.jjtSetVal(token.image);
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

  static final public void Identifier() throws ParseException {/*@bgen(jjtree) Identifier */
                     SimpleNode jjtn000 = new SimpleNode(JJTIDENTIFIER);
                     boolean jjtc000 = true;
                     jjtree.openNodeScope(jjtn000);
                     jjtn000.jjtSetFirstToken(getToken(1));Token token;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
        token = jj_consume_token(IDENTIFIER);
        break;
        }
      case MAIN:{
        token = jj_consume_token(MAIN);
        break;
        }
      case LENGTH:{
        token = jj_consume_token(LENGTH);
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.jjtSetLastToken(getToken(0));
jjtn000.jjtSetVal(token.image);
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

// *** Expression
  static final public void Expression() throws ParseException {
    Term1();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_1;
      }
      Op1();
    }
  }

  static final public void ExpressionTail() throws ParseException {
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MUL:
      case DIV:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_2;
      }
      Op4();
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SUM:
      case SUB:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_3;
      }
      Op3();
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LT:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      Op2();
    }
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_5;
      }
      Op1();
    }
  }

  static final public void LiteralExpression() throws ParseException {
    LiteralTerm4();
    ExpressionTail();
  }

  static final public void IdentifierExpression() throws ParseException {
    IdentifierTerm4();
    ExpressionTail();
  }

// *** Term
  static final public void Term1() throws ParseException {
    Term2();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LT:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_6;
      }
      Op2();
    }
  }

  static final public void Term2() throws ParseException {
    Term3();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SUM:
      case SUB:{
        ;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        break label_7;
      }
      Op3();
    }
  }

  static final public void Term3() throws ParseException {
    Term4();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MUL:
      case DIV:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_8;
      }
      Op4();
    }
  }

  static final public void Term4() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NEW:
    case THIS:
    case TRUE:
    case FALSE:
    case NOT:
    case LCB:
    case INTEGERLITERAL:{
      LiteralTerm4();
      break;
      }
    case MAIN:
    case LENGTH:
    case IDENTIFIER:{
      IdentifierTerm4();
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void LiteralTerm4() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGERLITERAL:{
      Integer();
      TermTail();
      break;
      }
    case TRUE:{
SimpleNode jjtn001 = new SimpleNode(JJTTRUE);
       boolean jjtc001 = true;
       jjtree.openNodeScope(jjtn001);
       jjtn001.jjtSetFirstToken(getToken(1));
      try {
        jj_consume_token(TRUE);
      } finally {
if (jjtc001) {
         jjtree.closeNodeScope(jjtn001, true);
         jjtn001.jjtSetLastToken(getToken(0));
       }
      }
      TermTail();
      break;
      }
    case FALSE:{
SimpleNode jjtn002 = new SimpleNode(JJTFALSE);
       boolean jjtc002 = true;
       jjtree.openNodeScope(jjtn002);
       jjtn002.jjtSetFirstToken(getToken(1));
      try {
        jj_consume_token(FALSE);
      } finally {
if (jjtc002) {
         jjtree.closeNodeScope(jjtn002, true);
         jjtn002.jjtSetLastToken(getToken(0));
       }
      }
      TermTail();
      break;
      }
    case THIS:{
SimpleNode jjtn003 = new SimpleNode(JJTTHIS);
       boolean jjtc003 = true;
       jjtree.openNodeScope(jjtn003);
       jjtn003.jjtSetFirstToken(getToken(1));
      try {
        jj_consume_token(THIS);
      } finally {
if (jjtc003) {
         jjtree.closeNodeScope(jjtn003, true);
         jjtn003.jjtSetLastToken(getToken(0));
       }
      }
      TermTail();
      break;
      }
    case LCB:{
      jj_consume_token(LCB);
      Expression();
      jj_consume_token(RCB);
      TermTail();
      break;
      }
    case NEW:{
      jj_consume_token(NEW);
      NewTerm();
      TermTail();
      break;
      }
    case NOT:{
      NOT();
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void IdentifierTerm4() throws ParseException {
    Identifier();
    TermTail();
  }

  static final public void TermTail() throws ParseException {
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case POINT:
      case LSB:{
        ;
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LSB:{
        ArrayAccess();
        break;
        }
      case POINT:{
        ObjectAccess();
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }
